# OperatorFunctors

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: clangformat.cmake  prelude.cmake  variables.cmake
include/operatorFunctors/: operatorFunctors.hpp
include/operatorFunctors/functors/: and.hpp  baseOperator.hpp  equal.hpp  false.hpp  greater.hpp  greaterEqual.hpp  notEqual.hpp  or.hpp  smaller.hpp  smallerEqual.hpp  true.hpp
include/operatorFunctors/helpers/: andOrOperator.hpp  forwardDeclaration.hpp  get.hpp  isAndUnion.hpp  isArg.hpp  isFalse.hpp  isOrUnion.hpp  isSameUnion.hpp  isTrue.hpp  value.hpp
include/operatorFunctors/unions/: andUnion.hpp  baseUnion.hpp  orUnion.hpp
tests/: CMakeLists.txt  operatorFunctors_test.cpp
tests/sources/: CMakeLists.txt  and.cpp  equal.cpp  false.cpp  greater.cpp  greaterEqual.cpp  helper.hpp  notEqual.cpp  or.cpp  smaller.cpp  smallerEqual.cpp  true.cpp  unions.cpp
